# incident-pilot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  stop.sh
.github/workflows/: tests.yml
docs/: POSTMORTEM_GENERATION_PROMPT.md  RUNBOOK_GENERATION_PROMPT.md  architecture.md  demo.txt  detailed_readme.md  detailed_readme.txt  hyde_semantic_chunking_design.md  incident-lifecycle-guide.md  incident-pilot-6-pager.md  rag_chunking_retrieval_design.md  team.md  walkthrough-log.md
docs/architecture/: high-level-design.md  low-level-design.md
docs/ingestion/: INGESTION_EXECUTIVE_SUMMARY.md  ingestion-analysis.md  ingestion-pipeline-6-pager.md
docs/postman/: IncidentPilot.postman_collection.json
docs/problem-statements/: ingestion_problem_statement.md
flask-generator/: Dockerfile  app.py  config.py  incident_scenarios.py  log_generator.py  metrics_exporter.py  pyproject.toml  requirements.txt  topology.py  traffic.py
grafana/provisioning/dashboards/: auth-service.json  cache-failover.json  dashboard.yml  fraud-outage.json  incident-overview.json  listing-service.json  payment-cascade.json  payment-service.json  pool-exhaustion.json
grafana/provisioning/datasources/: loki.yml  prometheus.yml
loki/: loki-config.yml
postmorterms/: 2026-03-checkout-outage-cache.md  2026-05-checkout-outage.md
prometheus/: prometheus.yml
prompts/: system_prompt.md
requirements/: requirements.md  tasks.md
runbooks/: checkout-api-runbook.md
scripts/: healthcheck.sh
src/: app.py  incident_pilot.py  ingestion.py  interfaces.py  logging_config.py  mcp_client.py  query_logs.py  request_context.py
src/mcp_server/: server.py
synthetic-data/logs/: auth-service-current-app-logs.jsonl  checkout-api-2026-05-14-app-logs.jsonl  checkout-api-current-app-logs.jsonl  listing-service-current-app-logs.jsonl  payment-service-current-app-logs.jsonl
synthetic-data/metrics/: auth-service-current-metrics.json  checkout-api-2026-05-14-metrics.json  checkout-api-current-metrics.json  checkout-api-week-metrics.csv  listing-service-current-metrics.json  payment-service-current-metrics.json
synthetic-data/postmorterms/: 2026-05-checkout-outage.md  2026-07-payment-service-cascade.md
synthetic-data/real-runbooks/: cart_api_errors.docx
synthetic-data/runbooks/: auth-service-runbook.md  checkout-api-runbook.md  listing-service-runbook.md  payment-service-runbook.md
synthetic-data/script/: generate_synthetic_data.py
tests/: test_fastapi_generator.py  test_incident_pilot.py  test_interfaces.py  test_mcp_server.py  test_postman_collection.py  test_query_logs.py
