[project]
name = "incident-pilot"
version = "3.0.0"
description = "AI-powered incident-response copilot for on-call SRE engineers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq",
    "langchain-core",
    "langchain-chroma",
    "langchain-text-splitters",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers==3.0.1",
    "transformers==4.44.0",
    "numpy<2",
    "python-dotenv",
    "requests",
    "gradio>=4.0,<5.0",
    "jinja2<3.1",
    "fastapi>=0.100.0,<0.112.0",
    "starlette>=0.27.0,<0.38.0",
    "prometheus-client>=0.21,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.27.0,<0.38.0",
    "mcp",
]

[dependency-groups]
test = [
    "pytest",
    "httpx",
]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "mypy",
]

[tool.uv]
# Torch must be installed separately due to its platform-specific index URL:
#   uv pip install torch --index-url https://download.pytorch.org/whl/cpu
#
# On Intel macOS, `uv lock`/`uv add` can fail to resolve because chromadb's
# onnxruntime pin has no macosx_x86_64 wheel for some versions. If that
# happens, install new deps (like `mcp` above) directly instead:
#   uv pip install mcp
# then reconcile uv.lock on a platform where the full resolve succeeds
# (Apple Silicon or Linux CI).
