[project]
name = "incident-generator"
version = "3.0.0"
description = "Tick-driven incident simulator for the IncidentPilot AI copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0,<0.112.0",
    "uvicorn[standard]>=0.27.0,<0.38.0",
    "prometheus-client>=0.21,<1.0",
    "pydantic>=2.0,<3.0",
    "requests>=2.31,<3.0",
]
